google-chart style overflow issue fix

--- a/sources/app.css
+++ b/sources/app.css
@@ -215,4 +215,5 @@ core-menu {
 google-chart {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
